Installed facebook pixel

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "src/modules/vsf-wp-json"]
 	path = src/modules/vsf-wp-json
 	url = git@github.com:new-fantastic/vsf-wp-json.git
+[submodule "src/modules/vsf-facebook-pixel"]
+	path = src/modules/vsf-facebook-pixel
+	url = git@github.com:new-fantastic/vsf-facebook-pixel.git
