--- a/config/nago_config.json
+++ b/config/nago_config.json
@@ -18,9 +18,9 @@
   },
   "seo": {
     "useUrlDispatcher": true
-  },    
+  },
   "console": {
-    "showErrorOnProduction" : true,
+    "showErrorOnProduction": true,
     "verbosityLevel": "display-everything"
   },
   "redis": {
@@ -28,7 +28,7 @@
     "port": 6379,
     "db": 0
   },
-  "graphql":{
+  "graphql": {
     "host": "localhost",
     "port": 8080
   },
@@ -47,16 +47,20 @@
     "searchScoring": {
       "attributes": {
         "attribute_code": {
-          "scoreValues": { "attribute_value": { "weight": 1 } }
+          "scoreValues": {
+            "attribute_value": {
+              "weight": 1
+            }
+          }
         }
       },
       "fuzziness": 2,
-      "cutoff_frequency":  0.01,
+      "cutoff_frequency": 0.01,
       "max_expansions": 3,
       "minimum_should_match": "75%",
-      "prefix_length": 2, 
+      "prefix_length": 2,
       "boost_mode": "multiply",
-      "score_mode": "multiply", 
+      "score_mode": "multiply",
       "max_boost": 100,
       "function_min_score": 1
     },
@@ -147,29 +151,29 @@
     "twoStageCaching": true,
     "optimizeShoppingCart": true,
     "category": {
-      "includeFields": [ "id", "*.children_data.id", "*.id", "children_count", "sku", "name", "is_active", "parent_id", "level", "url_key", "url_path", "product_count", "path"],
-      "excludeFields": [ "sgn" ],
+      "includeFields": ["id", "*.children_data.id", "*.id", "children_count", "sku", "name", "is_active", "parent_id", "level", "url_key", "url_path", "product_count", "path"],
+      "excludeFields": ["sgn"],
       "categoriesRootCategorylId": 2,
       "categoriesDynamicPrefetchLevel": 2,
       "categoriesDynamicPrefetch": true
     },
     "attribute": {
-      "includeFields": [ "attribute_code", "id", "entity_type_id", "options", "default_value", "is_user_defined", "frontend_label", "attribute_id", "default_frontend_label", "is_visible_on_front", "is_visible", "is_comparable", "tier_prices", "frontend_input" ]
+      "includeFields": ["attribute_code", "id", "entity_type_id", "options", "default_value", "is_user_defined", "frontend_label", "attribute_id", "default_frontend_label", "is_visible_on_front", "is_visible", "is_comparable", "tier_prices", "frontend_input"]
     },
     "productList": {
       "sort": "",
-      "includeFields": [ "tags", "material", "qualities", "drop", "type_id", "sku", "product_links", "tax_class_id", "special_price", "special_to_date", "special_from_date", "name", "price", "priceInclTax", "originalPriceInclTax", "originalPrice", "specialPriceInclTax", "id", "image", "sale", "new", "url_path", "url_key", "status", "tier_prices", "configurable_children.sku", "configurable_children.price", "configurable_children.special_price", "configurable_children.priceInclTax", "configurable_children.specialPriceInclTax", "configurable_children.originalPrice", "configurable_children.originalPriceInclTax" ],
-      "excludeFields": [ "description", "configurable_options", "sgn", "*.sgn", "msrp_display_actual_price_type", "*.msrp_display_actual_price_type", "required_options" ]
+      "includeFields": ["tags", "material", "qualities", "drop", "type_id", "sku", "product_links", "tax_class_id", "special_price", "special_to_date", "special_from_date", "name", "price", "priceInclTax", "originalPriceInclTax", "originalPrice", "specialPriceInclTax", "id", "image", "sale", "new", "url_path", "url_key", "status", "tier_prices", "configurable_children.sku", "configurable_children.price", "configurable_children.special_price", "configurable_children.priceInclTax", "configurable_children.specialPriceInclTax", "configurable_children.originalPrice", "configurable_children.originalPriceInclTax"],
+      "excludeFields": ["description", "configurable_options", "sgn", "*.sgn", "msrp_display_actual_price_type", "*.msrp_display_actual_price_type", "required_options"]
     },
     "productListWithChildren": {
-      "includeFields": [ "tags", "material", "qualities", "drop", "type_id", "sku", "name", "tax_class_id", "special_price", "special_to_date", "special_from_date", "price", "priceInclTax", "originalPriceInclTax", "originalPrice", "specialPriceInclTax", "id", "image", "sale", "new", "configurable_children.image", "configurable_children.sku", "configurable_children.price", "configurable_children.special_price", "configurable_children.priceInclTax", "configurable_children.specialPriceInclTax", "configurable_children.originalPrice", "configurable_children.originalPriceInclTax", "configurable_children.color", "configurable_children.size", "configurable_children.id", "configurable_children.tier_prices", "product_links", "url_path", "url_key", "status", "tier_prices"],
-      "excludeFields": [ "description", "sgn", "*.sgn", "msrp_display_actual_price_type", "*.msrp_display_actual_price_type", "required_options"]
+      "includeFields": ["tags", "material", "qualities", "drop", "type_id", "sku", "name", "tax_class_id", "special_price", "special_to_date", "special_from_date", "price", "priceInclTax", "originalPriceInclTax", "originalPrice", "specialPriceInclTax", "id", "image", "sale", "new", "configurable_children.image", "configurable_children.sku", "configurable_children.price", "configurable_children.special_price", "configurable_children.priceInclTax", "configurable_children.specialPriceInclTax", "configurable_children.originalPrice", "configurable_children.originalPriceInclTax", "configurable_children.color", "configurable_children.size", "configurable_children.id", "configurable_children.tier_prices", "product_links", "url_path", "url_key", "status", "tier_prices"],
+      "excludeFields": ["description", "sgn", "*.sgn", "msrp_display_actual_price_type", "*.msrp_display_actual_price_type", "required_options"]
     },
     "review": {
       "excludeFields": ["review_entity", "review_status"]
     },
     "product": {
-      "excludeFields": [ "*.msrp_display_actual_price_type", "required_options", "updated_at", "created_at", "attribute_set_id", "options_container", "msrp_display_actual_price_type", "has_options", "stock.manage_stock", "stock.use_config_min_qty", "stock.use_config_notify_stock_qty", "stock.stock_id",  "stock.use_config_backorders", "stock.use_config_enable_qty_inc", "stock.enable_qty_increments", "stock.use_config_manage_stock", "stock.use_config_min_sale_qty", "stock.notify_stock_qty", "stock.use_config_max_sale_qty", "stock.use_config_max_sale_qty", "stock.qty_increments", "small_image", "sgn", "*.sgn"],
+      "excludeFields": ["*.msrp_display_actual_price_type", "required_options", "updated_at", "created_at", "attribute_set_id", "options_container", "msrp_display_actual_price_type", "has_options", "stock.manage_stock", "stock.use_config_min_qty", "stock.use_config_notify_stock_qty", "stock.stock_id", "stock.use_config_backorders", "stock.use_config_enable_qty_inc", "stock.enable_qty_increments", "stock.use_config_manage_stock", "stock.use_config_min_sale_qty", "stock.notify_stock_qty", "stock.use_config_max_sale_qty", "stock.use_config_max_sale_qty", "stock.qty_increments", "small_image", "sgn", "*.sgn"],
       "includeFields": null,
       "useDynamicAttributeLoader": true,
       "standardSystemFields": [
@@ -279,13 +283,13 @@
     },
     "sortByAttributes": {
       "Latest": "updated_at",
-      "Price: Low to high":"final_price",
-      "Price: High to low":"final_price:desc"
+      "Price: Low to high": "final_price",
+      "Price: High to low": "final_price:desc"
     },
     "gallery": {
       "variantsGroupAttribute": "color",
       "mergeConfigurableChildren": true,
-      "imageAttributes": ["image","thumbnail","small_image"],
+      "imageAttributes": ["image", "thumbnail", "small_image"],
       "width": 600,
       "height": 744
     },
@@ -298,13 +302,12 @@
   "orders": {
     "directBackendSync": true,
     "endpoint": "https://api.pln.nago.com/api/order",
-    "payment_methods_mapping": {
-    },
+    "payment_methods_mapping": {},
     "offline_orders": {
       "automatic_transmission_enabled": false,
-      "notification" : {
+      "notification": {
         "enabled": true,
-        "title" : "Order waiting!",
+        "title": "Order waiting!",
         "message": "Click here to confirm the order that you made offline.",
         "icon": "/assets/logo.png"
       }
@@ -364,22 +367,20 @@
     "calculateServerSide": true
   },
   "shipping": {
-    "methods": [
-      {
-        "method_title": "DPD Courier",
-        "method_code": "flatrate",
-        "carrier_code": "flatrate",
-        "amount": 4,
-        "price_incl_tax": 5,
-        "default": true,
-        "offline": true
-      }
-    ]
+    "methods": [{
+      "method_title": "DPD Courier",
+      "method_code": "flatrate",
+      "carrier_code": "flatrate",
+      "amount": 4,
+      "price_incl_tax": 5,
+      "default": true,
+      "offline": true
+    }]
   },
   "i18n": {
     "defaultCountry": "PL",
     "defaultLanguage": "PL",
-    "availableLocale": ["en-US","de-DE","fr-FR","es-ES","nl-NL", "jp-JP", "ru-RU", "it-IT", "pt-BR", "pl-PL", "cs-CZ"],
+    "availableLocale": ["en-US", "de-DE", "fr-FR", "es-ES", "nl-NL", "jp-JP", "ru-RU", "it-IT", "pt-BR", "pl-PL", "cs-CZ"],
     "defaultLocale": "pl-PL",
     "currencyCode": "PLN",
     "currencySign": " zł",
@@ -426,36 +427,39 @@
   "useZeroPriceProduct": true,
   "query": {
     "inspirations": {
-      "filter": [
-        {
-          "key": "category.name",
-          "value" : { "eq": "Performance Fabrics" }
+      "filter": [{
+        "key": "category.name",
+        "value": {
+          "eq": "Performance Fabrics"
         }
-      ]
+      }]
     },
     "newProducts": {
-      "filter": [
-        {
-          "key": "category.name",
-          "value" : { "eq": "Tees" }
+      "filter": [{
+        "key": "category.name",
+        "value": {
+          "eq": "Tees"
         }
-      ]
+      }]
     },
     "coolBags": {
-      "filter": [
-        {
-          "key": "category.name",
-          "value" : { "eq": "Women" }
+      "filter": [{
+        "key": "category.name",
+        "value": {
+          "eq": "Women"
         }
-      ]
+      }]
     },
     "bestSellers": {
-      "filter": [
-        {
-          "key": "category.name",
-          "value" : { "eq": "Tees" }
+      "filter": [{
+        "key": "category.name",
+        "value": {
+          "eq": "Tees"
         }
-      ]
+      }]
     }
+  },
+  "facebookPixel": {
+    "id": "407983889815506"
   }
 }
