--- a/config/nago_config.json
+++ b/config/nago_config.json
@@ -461,5 +461,9 @@
   },
   "facebookPixel": {
     "id": "407983889815506"
+  },
+  "facebookJsSdk": {
+    "appId": "488234078415966",
+    "pageId": "1597769753863797"
   }
 }
