--- a/config/nago_config.json
+++ b/config/nago_config.json
@@ -244,11 +244,11 @@
         "configurable_children.priceInclTax",
         "configurable_children.specialPriceInclTax",
         "configurable_children.originalPrice",
-        "configurable_children.originalPriceInclTax"
+        "configurable_children.originalPriceInclTax",
+        "configurable_options"
       ],
       "excludeFields": [
         "description",
-        "configurable_options",
         "sgn",
         "*.sgn",
         "msrp_display_actual_price_type",
@@ -296,7 +296,8 @@
         "url_path",
         "url_key",
         "status",
-        "tier_prices"
+        "tier_prices",
+        "configurable_options"
       ],
       "excludeFields": [
         "description",
