--- a/config/nago_config.json
+++ b/config/nago_config.json
@@ -238,13 +238,18 @@
         "url_key",
         "status",
         "tier_prices",
+        "configurable_children.image",
+        "configurable_children.small_image",
+        "configurable_children.thumbnail",
         "configurable_children.sku",
+        "configurable_children.name",
         "configurable_children.price",
         "configurable_children.special_price",
         "configurable_children.priceInclTax",
         "configurable_children.specialPriceInclTax",
         "configurable_children.originalPrice",
         "configurable_children.originalPriceInclTax",
+        "configurable_children.stock.is_in_stock",
         "configurable_options"
       ],
       "excludeFields": [
@@ -281,6 +286,8 @@
         "sale",
         "new",
         "configurable_children.image",
+        "configurable_children.small_image",
+        "configurable_children.thumbnail",
         "configurable_children.sku",
         "configurable_children.price",
         "configurable_children.special_price",
@@ -292,6 +299,7 @@
         "configurable_children.size",
         "configurable_children.id",
         "configurable_children.tier_prices",
+        "configurable_children.stock.is_in_stock",
         "product_links",
         "url_path",
         "url_key",
@@ -408,7 +416,7 @@
     "synchronize_totals": true,
     "setCustomProductOptions": true,
     "setConfigurableProductOptions": true,
-    "askBeforeRemoveProduct": false,
+    "askBeforeRemoveProduct": true,
     "displayItemDiscounts": true,
     "minicartCountType": "quantities",
     "create_endpoint": "https://api.pln.nago.com/api/cart/create?token={{token}}",
