--- a/config/nago_config.json
+++ b/config/nago_config.json
@@ -226,6 +226,8 @@
         "special_price",
         "special_to_date",
         "special_from_date",
+        "news_from_date",
+        "news_to_date",
         "name",
         "price",
         "priceInclTax",
@@ -253,6 +255,8 @@
         "configurable_children.originalPriceInclTax",
         "configurable_children.stock.is_in_stock",
         "configurable_children.media_gallery",
+        "configurable_children.news_from_date",
+        "configurable_children.news_to_date",
         "media_gallery",
         "configurable_options"
       ],
@@ -281,6 +285,8 @@
         "special_price",
         "special_to_date",
         "special_from_date",
+        "news_from_date",
+        "news_to_date",
         "price",
         "priceInclTax",
         "originalPriceInclTax",
@@ -307,6 +313,8 @@
         "configurable_children.tier_prices",
         "configurable_children.stock.is_in_stock",
         "configurable_children.media_gallery",
+        "configurable_children.news_from_date",
+        "configurable_children.news_to_date",
         "media_gallery",
         "product_links",
         "url_path",
@@ -404,6 +412,7 @@
         "erin_recommends",
         "special_from_date",
         "news_from_date",
+        "news_to_date",
         "custom_design_from",
         "originalPrice",
         "originalPriceInclTax",
@@ -454,7 +463,7 @@
     "waitForPlatformSync": false,
     "setupVariantByAttributeCode": true,
     "endpoint": "https://api.pln.nago.com/api/product",
-    "defaultFilters": ["color", "size", "price", "erin_recommends"],
+    "defaultFilters": ["color", "size", "price", "erin_recommends", "style"],
     "filterFieldMapping": {
       "category.name": "category.name.keyword"
     },
