Added missing attribute to config

--- a/config/nago_config.json
+++ b/config/nago_config.json
@@ -171,6 +171,7 @@
     "optimizeShoppingCart": true,
     "category": {
       "includeFields": [
+        "description",
         "id",
         "*.children_data.id",
         "*.id",
