--- a/config/nago_config.json
+++ b/config/nago_config.json
@@ -170,6 +170,7 @@
     "twoStageCaching": true,
     "optimizeShoppingCart": true,
     "category": {
+      "categoriesRootCategorySlug": "nago",
       "includeFields": [
         "description",
         "id",
