--- a/config/kubota_config.json
+++ b/config/kubota_config.json
@@ -33,7 +33,10 @@
       "query"
     ],
     "dynamicConfigInclude": [],
-    "elasticCacheQuota": 4096
+    "elasticCacheQuota": 4096,
+    "ssrDisabledFor": {
+      "extensions": [".png", ".gif", ".jpg", ".jpeg", ".woff", ".eot", ".woff2", ".ttf", ".svg", ".css", ".js", ".json", ".ico", ".tiff", ".tif", ".raw"]
+    }
   },
   "seo": {
     "useUrlDispatcher": false
