--- a/.gitignore
+++ b/.gitignore
@@ -30,6 +30,6 @@ core/resource/i18n/pl-PL.json
 core/resource/i18n/pt-BR.json
 core/resource/i18n/ru-RU.json
 *.iml
-
+packages
 #unit testing
 /test/unit/coverage
