--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "reflect-metadata": "^0.1.12",
     "register-service-worker": "^1.5.2",
     "ts-node": "^7.0.1",
+    "vsf-external-checkout": "^2.0.0",
     "vue": "^2.6.6",
     "vue-analytics": "^5.16.1",
     "vue-apollo": "^3.0.0-beta.19",
